...
        resizeMode={'stretch'}
      />
    );
  };

  return (
    <Container testID="detailView" style={styles.wrapper}>
      <View>{renderImage()}</View>
      <Animated.ScrollView
        testID="detailScroll"
        style={styles.scrollWrapper}
        onScroll={Animated.event(
          [
            {
              nativeEvent: {
                contentOffset: {
...
